# fastapi_elk_grafana

./: .gitignore  .pre-commit-config.yaml  Dockerfile  api_comands.http  docker-compose.yml  pyproject.toml
app/: main.py
grafana/dashboards/: grafana-dashboard.json
logstash/: logstash.conf
